<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true"
>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/darkviolettwo"
            android:id="@+id/TituloApp"
            android:text="@string/converter"
            android:textSize="30sp"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:padding="25dp"
    />

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:padding="15dp"
                  android:background="@color/greenwhite"
    >


            <TextView android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:layout_weight="1"
                      android:text="@string/type"
                      android:textSize="20dp"
                      android:gravity="center_horizontal"
                      android:textColor="@color/black"
            />

            <Spinner  android:layout_width="0dp"
                      android:layout_height="wrap_content"
                      android:layout_weight="1"
                      android:id="@+id/spinner1"
            />


    </LinearLayout>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/darkviolettwo"
            android:id="@+id/txResult"
            android:text=""
            android:textSize="30sp"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:padding="15dp"
    />

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:background="@color/whitesmoke"

    >
        <EditText android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:id="@+id/etCantidad"
                  android:gravity="center_horizontal"
                  android:inputType="number"
                  android:hint="@string/example"/>

        <Button android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bnConverter"
                android:id="@+id/bnConverter"
                android:textAllCaps="false"
                android:textSize="30dp"
        />
    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:background="@color/greenwhite"
                  android:padding="15dp"
    >
        <TextView android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:id="@+id/txpesos"
                  android:text="@string/pesos"
                  android:textSize="30sp"
                  android:gravity="center_horizontal"
                  android:textStyle="bold"
                  android:textColor="@color/black"

        />

        <TextView android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:id="@+id/nmpesos"
                  android:text=""
                  android:textSize="15sp"
                  android:gravity="center_horizontal"
                  android:textStyle="bold"
                  android:textColor="@color/black"

        />

    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:background="@color/darkviolettwo"
                  android:padding="15dp"
    >
        <TextView android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:id="@+id/txdollars"
                  android:text="@string/dollars"
                  android:textSize="30sp"
                  android:gravity="center_horizontal"
                  android:textStyle="bold"
                  android:textColor="@color/black"
        />

        <TextView android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:id="@+id/nmdollars"
                  android:text=""
                  android:textSize="15sp"
                  android:gravity="center_horizontal"
                  android:textStyle="bold"
                  android:textColor="@color/black"
        />

    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:background="@color/greenwhite"
                  android:padding="15dp"
    >
        <TextView android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:id="@+id/txeuros"
                  android:text="@string/euros"
                  android:textSize="30sp"
                  android:gravity="center_horizontal"
                  android:textStyle="bold"
                  android:textColor="@color/black"
        />

        <TextView android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:id="@+id/nmeuros"
                  android:text=""
                  android:textSize="15sp"
                  android:gravity="center_horizontal"
                  android:textStyle="bold"
                  android:textColor="@color/black"
        />

    </LinearLayout>

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:background="@color/darkviolettwo"
                  android:padding="15dp"
    >
        <TextView android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:id="@+id/txlibras"
                  android:text="@string/libras"
                  android:textSize="30sp"
                  android:gravity="center_horizontal"
                  android:textStyle="bold"
                  android:textColor="@color/black"
        />

        <TextView android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  android:id="@+id/nmlibras"
                  android:text=""
                  android:textSize="15sp"
                  android:gravity="center_horizontal"
                  android:textStyle="bold"
                  android:textColor="@color/black"
        />

    </LinearLayout>



</LinearLayout>
